<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LocationsActivity" >


        <Button
            android:id="@+id/btnProfessors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/strProfessors" />
        <Button
            android:id="@+id/btnLocations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/strLocations" />

        <LinearLayout
            android:id="@+id/lnlLocations"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btnLocations"
            android:layout_below="@+id/btnLocations"
            android:layout_marginTop="22dp"
            android:layout_alignBottom="@layout/activity_locations"
            android:background="#000000"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnClass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/strClass" 
                android:onClick="retrieveListOfItems"/>
            <Button
                android:id="@+id/btnLAB"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/strLAB" />
            <Button
                android:id="@+id/btnLibrary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/strLibrary" />
            <Button
                android:id="@+id/btnOffice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/strOffice" />
            
        </LinearLayout>

        

</RelativeLayout>